# finance-tracker-app

./: .gitignore
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260420_2156_7c6949c5a2de_initial_setup.py  20260420_2235_f2602a69bdcc_create_users_and_refresh_tokens.py  20260422_1327_d4f30616b6f8_phase_4_task_system.py  20260422_2258_deb18e825d46_phase_5_financial_core.py  20260423_0831_31e70417a904_phase_5_1_transaction_types.py  20260423_2008_9438eaf60b86_create_savings_notifications_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  constants.py  exceptions.py  logging.py  middleware.py  redis.py  security.py
backend/app/models/: __init__.py  allowance.py  base.py  expense.py  family.py  fund_request.py  invitation.py  notification.py  pts_exchange_rate.py  refresh_token.py  savings_goal.py  subscription.py  task.py  transaction.py  user.py  wallet.py
backend/app/schemas/: allowance.py  auth.py  common.py  expense.py  family.py  fund_request.py  notification.py  savings_goal.py  subscription.py  task.py  user.py  wallet.py
backend/app/services/: __init__.py  allowance_service.py  auth_service.py  common.py  expense_service.py  family_service.py  fund_request_service.py  invitation_service.py  notification_service.py  savings_goal_service.py  subscription_service.py  task_service.py  (+2 more)
backend/tests/: conftest.py  test_auth.py  test_e2e_flow.py  test_engagement.py  test_family.py  test_financial.py  test_task.py
(+69 files in other folders)
